crates/atlas-runtime/tests/corpus/pass/var_mutable_global.atlas
// Tests that top-level var can be reassigned
var x: number = 1;
x = 2;
print(x);
