crates/atlas-runtime/tests/corpus/fail/let_reassign_global.atlas
// Tests that reassignment to a top-level let variable fails
let x: number = 1;
x = 2; // Should fail: cannot assign to immutable variable
